# drawerer

./: README.md  main.py  pyproject.toml
src/: demo.py  display_app.py  index.html  prototype.py  simulations.py
src/drawerer/: core.py  demo.py  simulations.py
src/drawerer/static/: index.html  style.css
