[project]
name = "drawerer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "James Ashford", email = "ashfordj@rocketmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "scipy>=1.17.0",
]

[project.scripts]
drawerer-demo = "drawerer.demo:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
